Updated Spring cloud messaging